<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="demo_plot">Movie details layout contains title, release date, movie poster, vote average, and plot synopsis. Movie details layout contains title, release date, movie poster, vote average, and plot synopsis. Movie details layout contains title, release date, movie poster, vote average, and plot synopsis. Movie details layout contains title, release date, movie poster, vote average, and plot synopsis. Movie details layout contains title, release date, movie poster, vote average, and plot synopsis.</string>
    <string name="plot">Plot</string>
    <string name="demo_votes">9.5/10</string>
    <string name="votes">Votes</string>
    <string name="demo_release_date">2252528/356456</string>
    <string name="release_date">Release Date</string>
    <string name="movie_title_demo">Johnny Mnemonic Johnny Mnemonic Johnny</string>
    <string name="error_message">Failed to get results. Please try again.</string>
    <string name="title">Title</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="playing_now">Playing Now</string>
    <string name="trailers">Trailers and Videos</string>
    <string name="reviews">User Reviews</string>
    <string name="title_activity_favorite">Favorite Movies</string>
</resources>
