<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    android:clipToPadding="false"
    android:padding="8dp"
    android:scrollbarStyle="outsideOverlay"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mzdhr.popularmovies.ui.DetailsActivity"
    tools:showIn="@layout/activity_details"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/poster_layout"
            style="@style/overLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"

            >

            <ImageView
                android:id="@+id/movie_poster_imageView"
                android:layout_width="185dp"
                android:layout_height="278dp"
                android:scaleType="fitXY"
                android:src="@drawable/demo_poster"
                android:background="@drawable/boarder_background"
                />

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_toEndOf="@id/poster_layout"
                android:orientation="vertical"
                android:padding="4dp"
                >

                <TextView
                    style="@style/headerTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    />

                <TextView
                    android:id="@+id/movie_title_textView"
                    style="@style/subHeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_title_demo"
                    />

                <TextView
                    style="@style/headerTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    />

                <TextView
                    android:id="@+id/movie_release_date_textView"
                    style="@style/subHeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_release_date"
                    />

                <TextView
                    style="@style/headerTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/votes"
                    />

                <TextView
                    android:id="@+id/movie_vote_textView"
                    style="@style/subHeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_votes"
                    />
            </LinearLayout>
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/plot_layout"
            style="@style/overLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/poster_layout"
            >

            <TextView
                android:id="@+id/plot_header_textView"
                style="@style/headerTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plot"
                />

            <TextView
                android:id="@+id/movie_plot_textView"
                style="@style/subHeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/plot_header_textView"
                android:text="@string/demo_plot"
                android:padding="8dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/trailer_layout"
            style="@style/overLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plot_layout"
            >

            <TextView
                android:id="@+id/trailer_header_textView"
                style="@style/headerTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailerRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trailer_header_textView"
                android:clipToPadding="false"
                android:padding="4dp"
                tools:listitem="@layout/list_item_movie_trailer"

                >

            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/review_layout"
            style="@style/overLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailer_layout"
            >

            <TextView
                android:id="@+id/reviews_header_textView"
                style="@style/headerTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviewRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reviews_header_textView"
                android:clipToPadding="false"
                android:padding="4dp"
                tools:listitem="@layout/list_item_movie_review"

                >
            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>