<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/poster_layout"
    style="@style/overLayoutStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    >

    <ImageView
        android:id="@+id/movie_poster_imageView"
        android:layout_width="185dp"
        android:layout_height="278dp"
        android:background="@drawable/boarder_background"
        android:scaleType="fitXY"
        android:src="@drawable/demo_poster"
        />

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_toEndOf="@id/movie_poster_imageView"
        android:orientation="vertical"
        android:padding="4dp"
        >


        <TextView
            android:id="@+id/movie_title_textView"
            style="@style/headerTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_title_demo"
            android:textSize="20sp"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="10"
            android:rating="7"
            android:stepSize="0.5"
            />

        <TextView
            android:id="@+id/movie_release_date_textView"
            style="@style/subHeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_release_date"
            />


        <TextView
            android:id="@+id/movie_vote_textView"
            style="@style/subHeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_votes"
            android:visibility="gone"
            />


    </LinearLayout>


</RelativeLayout>
